notifications client side

--- a/client/src/angular/notifications/notification-detail.html
+++ b/client/src/angular/notifications/notification-detail.html
@@ -1,4 +1,8 @@
-<div>
-  <h3> Notification </h3>
-  <p> {{vm.note.text}} </p>
+<div class="notification">
+  <div class="bg-success status">
+    <i class="fa fa-check-circle-o"></i>
+  </div>
+  <div class="">
+    <span> {{vm.note.message}} </span>
+  </div>
 </div>
