--- a/client/src/angular/notifications/notifications-list.html
+++ b/client/src/angular/notifications/notifications-list.html
@@ -1,10 +1,10 @@
-<div class="col-md-12">
+<div class="">
   <div class="jumbotron" ng-show="vm.total===0">
     <h2> Whew, no notifications! </h2>
   </div>
   <notification-detail
-    ng-repeat="note in vm.notifications"
+    ng-repeat="note in vm.notes"
     note="note"
-    on-delete="vm.delete(note)">
+    delete="vm.delete(note)">
   </notification-detail>
 </div>
