--- a/client/src/angular/data_depot/modals/data-browser-service-copy.html
+++ b/client/src/angular/data_depot/modals/data-browser-service-copy.html
@@ -129,11 +129,20 @@
 <div class="modal-footer">
     <div class="text-right">
         <button class="btn btn-primary" type="button"
+                ng-show="listing.name != '' "
                 ng-disabled="! validDestination(listing)"
                 ng-click="chooseDestination(listing)"
                 ng-if="!state.listingProjects"
         >
             Copy to {{ listing.name }}
+        </button>
+        <button class="btn btn-primary" type="button"
+                ng-show="listing.name == '' "
+                ng-disabled="! validDestination(listing)"
+                ng-click="chooseDestination(listing)"
+                ng-if="!state.listingProjects"
+        >
+            Copy to My Data
         </button>
         <button class="btn btn-default" type="button" ng-click="cancel()">Cancel</button>
     </div>
