--- a/client/src/angular/data_depot/modals/data-browser-service-preview.html
+++ b/client/src/angular/data_depot/modals/data-browser-service-preview.html
@@ -61,9 +61,9 @@
             <i class="fa fa-pencil"></i> Rename
         </button>
 
-        <button class="btn btn-sm btn-default" ng-if="tests.canViewMetadata" ng-click="viewMetadata()">
+        <!-- <button class="btn btn-sm btn-default" ng-if="tests.canViewMetadata" ng-click="viewMetadata()">
             <i class="fa fa-book"></i>View / Edit Metadata
-        </button>
+        </button> -->
 
         <button class="btn btn-sm btn-default" ng-if="tests.canTrash" ng-click="trash()">
             <i class="fa fa-trash"></i> Move to Trash
