revisions to ngshow removed preview modal from dbs removed toolbar from preview modal

--- a/client/src/angular/data_depot/modals/data-browser-service-copy.html
+++ b/client/src/angular/data_depot/modals/data-browser-service-copy.html
@@ -129,7 +129,7 @@
 <div class="modal-footer">
     <div class="text-right">
         <button class="btn btn-primary" type="button"
-                ng-show="listing.name != '' "
+                ng-show="listing.name"
                 ng-disabled="! validDestination(listing)"
                 ng-click="chooseDestination(listing)"
                 ng-if="!state.listingProjects"
@@ -137,7 +137,7 @@
             Copy to {{ listing.name }}
         </button>
         <button class="btn btn-primary" type="button"
-                ng-show="listing.name == '' "
+                ng-show="!listing.name"
                 ng-disabled="! validDestination(listing)"
                 ng-click="chooseDestination(listing)"
                 ng-if="!state.listingProjects"
