--- a/client/src/angular/data_depot/modals/data-browser-service-move.html
+++ b/client/src/angular/data_depot/modals/data-browser-service-move.html
@@ -132,14 +132,14 @@
 <div class="modal-footer">
     <div class="text-right">
         <button class="btn btn-primary" type="button"
-                ng-show="listing.name != '' "
+                ng-show="listing.name"
                 ng-disabled="! validDestination(listing)"
                 ng-click="chooseDestination(listing)"
         >
             Move to {{ listing.name }}
         </button>
         <button class="btn btn-primary" type="button"
-                ng-show="listing.name == '' "
+                ng-show="!listing.name"
                 ng-disabled="! validDestination(listing)"
                 ng-click="chooseDestination(listing)"
         >
