--- a/server/conf/nginx/error.html
+++ b/server/conf/nginx/error.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="500 Internal Server Error">
     <meta name="author" content="">
-    <title>Temporarily Unavailable | DesignSafe-CI</title>
+    <title>Temporarily Unavailable | Frontera Web</title>
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
@@ -57,10 +57,10 @@
     <!-- Jumbotron -->
     <div class="jumbotron">
         <div class="text-center">
-            <img src="/static/images/ds-logo-horiz.png" alt="DesignSafe-CI Temporarily Unavailable">
+            <img src="/static/images/ds-logo-horiz.png" alt="Portal Temporarily Unavailable">
         </div>
         <p class="lead">
-            DesignSafe-CI is temporarily unavailable due to maintenance.
+            This portal is temporarily unavailable due to maintenance.
             We apologize for the inconvenience. Please try again later.
         </p>
         <a href="javascript:document.location.reload(true);" class="btn btn-default btn-lg text-center"><span class="green">Try This Page Again</span></a>
