remove references to frontera

--- a/server/conf/nginx/error.html
+++ b/server/conf/nginx/error.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="500 Internal Server Error">
     <meta name="author" content="">
-    <title>Temporarily Unavailable | Frontera Web</title>
+    <title>Temporarily Unavailable</title>
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
